--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "theme-ui": "^0.16.1",
     "typescript": "*",
     "web-vitals": "^2.1.4"
