--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "isolatedModules": false,
     "sourceMap": true
   },
-  "include": ["src", ".eslintrc.json", "src/ElementContext"],
+  "include": ["src", ".eslintrc.js"],
   "exclude": ["node_modules"]
 }
+
